--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,7 @@ zebra-test = { version = "1.0.0-beta.35", default-features = false }
 zebra-chain = { version = "1.0.0-beta.35", default-features = false, features = ["proptest-impl"] }
 
 [patch.crates-io]
+# Ring needed to be patched as while the current version supports riscv, the version used by Zebra doesn't.
 ring = { git = "https://github.com/willemolding/ring",  branch = "willemolding/riscv-build-0.16.20" }
+# rocksdb needs to link libatomic for riscv builds but doesn't do this. This patch adds it in
+rocksdb = { git = "git@github.com:willemolding/rust-rocksdb.git", branch = "willemolding/riscv-support" }
