--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ zebra-chain = { version = "1.0.0-beta.35", default-features = false, features = 
 [patch.crates-io]
 # Ring needed to be patched as while the current version supports riscv, the version used by Zebra doesn't.
 ring = { git = "https://github.com/willemolding/ring",  branch = "willemolding/riscv-build-0.16.20" }
-# rocksdb needs to link libatomic for riscv builds but doesn't do this. This patch adds it in
-rocksdb = { git = "git@github.com:willemolding/rust-rocksdb.git", branch = "willemolding/riscv-support" }
+# rocksdb needs to link libatomic for riscv builds but doesn't do this. This patch adds it in. Can be merged upstream
+rocksdb = { git = "https://github.com/willemolding/rust-rocksdb", branch = "willemolding/riscv-support" }
