--- a/tiny-cash/Cargo.toml
+++ b/tiny-cash/Cargo.toml
@@ -7,8 +7,12 @@ license = "APACHE-2.0"
 
 [dependencies]
 tower = { version = "0.4.13", features = ["timeout", "util", "buffer"] }
+chrono = { version = "0.4.34", default-features = false, features = ["clock", "std"] }
 zebra-consensus = { version = "1.0.0-beta.35", default-features = false, features = ["getblocktemplate-rpcs"] }
 zebra-state = { version = "1.0.0-beta.35", default-features = false, features = ["proptest-impl"] }
 zebra-test = { version = "1.0.0-beta.35", default-features = false }
 zebra-chain = { version = "1.0.0-beta.35", default-features = false, features = ["getblocktemplate-rpcs", "proptest-impl"] }
 futures-util = "0.3.30"
+
+[dev-dependencies]
+tokio = { version = "1.36.0", features = ["test-util"] }
