--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,17 @@ zebra-chain = { workspace = true }
 [workspace.dependencies]
 
 # patched zebra crates to support TinyCash network and expose things we need
-zebra-consensus = { git = "https://github.com/willemolding/zebra", rev = "698ee049c4d0b21d0261462e3a4129e5896a2b28", default-features = false }
-zebra-state = { git = "https://github.com/willemolding/zebra", rev = "698ee049c4d0b21d0261462e3a4129e5896a2b28", default-features = false }
-zebra-test = { git = "https://github.com/willemolding/zebra", rev = "698ee049c4d0b21d0261462e3a4129e5896a2b28", default-features = false }
-zebra-chain = { git = "https://github.com/willemolding/zebra", rev = "698ee049c4d0b21d0261462e3a4129e5896a2b28", default-features = false }
+# zebra-consensus = { git = "https://github.com/willemolding/zebra", rev = "698ee049c4d0b21d0261462e3a4129e5896a2b28", default-features = false }
+# zebra-state = { git = "https://github.com/willemolding/zebra", rev = "698ee049c4d0b21d0261462e3a4129e5896a2b28", default-features = false }
+# zebra-test = { git = "https://github.com/willemolding/zebra", rev = "698ee049c4d0b21d0261462e3a4129e5896a2b28", default-features = false }
+# zebra-chain = { git = "https://github.com/willemolding/zebra", rev = "698ee049c4d0b21d0261462e3a4129e5896a2b28", default-features = false }
+zebra-consensus = { path = "../zebra/zebra-consensus", default-features = false }
+zebra-state = { path = "../zebra/zebra-state", default-features = false }
+zebra-test = { path = "../zebra/zebra-test", default-features = false }
+zebra-chain = { path = "../zebra/zebra-chain", default-features = false }
+
+
+
 
 [patch.crates-io]
 # Ring needed to be patched as while the current version supports riscv, the version used by Zebra doesn't.
