--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
-[build]
-target = "riscv64gc-unknown-linux-gnu"
+# [build]
+# target = "riscv64gc-unknown-linux-gnu"
 
 [target.riscv64gc-unknown-linux-gnu]
 rustflags = ["-C", "target-feature=+crt-static"]
