--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ ethereum-types = "0.14.1"
 
 zebra-chain = { workspace = true }
 tiny-cash = { path = "tiny-cash" }
+futures-util = "0.3.30"
 
 [workspace]
 members = ["tiny-cash"]
