--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,13 @@ uint = "0.9.5"
 ethereum-types = "0.14.1"
 
 zebra-chain = { workspace = true }
+zebra-state = { workspace = true }
+zebra-consensus = { workspace = true }
+
 tiny-cash = { path = "tiny-cash" }
 futures-util = "0.3.30"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [workspace]
 members = ["tiny-cash"]
