--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 [workspace]
-members = ["tiny-cash"]
+members = [ "cartezcash-proxy","tiny-cash"]
 
 [workspace.dependencies]
 
