--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,20 @@ anyhow = "1.0.81"
 hex = "0.4.3"
 uint = "0.9.5"
 ethereum-types = "0.14.1"
+futures-util = "0.3.30"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 zebra-chain = { workspace = true }
 zebra-state = { workspace = true }
 zebra-consensus = { workspace = true }
 
 tiny-cash = { path = "tiny-cash" }
-futures-util = "0.3.30"
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+cartezcash-proxy = { path = "cartezcash-proxy" }
+tonic = "0.11.0"
 
 [workspace]
-members = [ "cartezcash-proxy","tiny-cash"]
+members = [ "cartezcash-proxy", "tiny-cash"]
 
 [workspace.dependencies]
 
