--- a/tiny-cash/Cargo.toml
+++ b/tiny-cash/Cargo.toml
@@ -15,6 +15,7 @@ zebra-test = { workspace = true, default-features = false }
 zebra-chain = { workspace = true, default-features = false, features = ["getblocktemplate-rpcs", "proptest-impl"] }
 futures-util = "0.3.30"
 tracing-test = "0.2.4"
+hex = "0.4.3"
 
 [dev-dependencies]
 tokio = { version = "1.36.0", features = ["test-util"] }
