--- a/cartezcash-proxy/Cargo.toml
+++ b/cartezcash-proxy/Cargo.toml
@@ -19,3 +19,4 @@ zebra-test = { workspace = true, default-features = false }
 zebra-chain = { workspace = true, default-features = false, features = ["getblocktemplate-rpcs", "proptest-impl"] }
 tower = "0.4.13"
 hex = "0.4.3"
+futures-util = "0.3.30"
