--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 authors = ["Willem Olding <willemolding@gmail.com>"]
 license = "APACHE-2.0"
 
+[features]
+default = ["proxy"]
+proxy = ["cartezcash-proxy", "tonic"]
+
 [dependencies]
 
 json = "0.12"
@@ -19,15 +23,16 @@ ethereum-types = "0.14.1"
 futures-util = "0.3.30"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+ethabi = "18.0.0"
 
 zebra-chain = { workspace = true }
 zebra-state = { workspace = true }
 zebra-consensus = { workspace = true }
 
 tiny-cash = { path = "tiny-cash" }
-cartezcash-proxy = { path = "cartezcash-proxy" }
-tonic = "0.11.0"
-ethabi = "18.0.0"
+
+cartezcash-proxy = { path = "cartezcash-proxy", optional = true }
+tonic = { version = "0.11.0", optional = true }
 
 [workspace]
 members = [ "cartezcash-proxy", "tiny-cash"]
@@ -37,16 +42,16 @@ members = [ "cartezcash-proxy", "tiny-cash"]
 # patched zebra crates to support TinyCash network and expose things we need
 
 # use these for docker builds
-# zebra-consensus = { git = "https://github.com/willemolding/zebra", rev = "30f776c896c974b8c73f2bd677658746dcfedeab", default-features = false }
-# zebra-state = { git = "https://github.com/willemolding/zebra", rev = "30f776c896c974b8c73f2bd677658746dcfedeab", default-features = false }
-# zebra-test = { git = "https://github.com/willemolding/zebra", rev = "30f776c896c974b8c73f2bd677658746dcfedeab", default-features = false }
-# zebra-chain = { git = "https://github.com/willemolding/zebra", rev = "30f776c896c974b8c73f2bd677658746dcfedeab", default-features = false }
+zebra-consensus = { git = "https://github.com/willemolding/zebra", rev = "ead0eca6ae22655294a43914b89804ab3219f2c0", default-features = false }
+zebra-state = { git = "https://github.com/willemolding/zebra", rev = "ead0eca6ae22655294a43914b89804ab3219f2c0", default-features = false }
+zebra-test = { git = "https://github.com/willemolding/zebra", rev = "ead0eca6ae22655294a43914b89804ab3219f2c0", default-features = false }
+zebra-chain = { git = "https://github.com/willemolding/zebra", rev = "ead0eca6ae22655294a43914b89804ab3219f2c0", default-features = false }
 
 # use these for speedy local development
-zebra-consensus = { path = "../zebra/zebra-consensus", default-features = false }
-zebra-state = { path = "../zebra/zebra-state", default-features = false }
-zebra-test = { path = "../zebra/zebra-test", default-features = false }
-zebra-chain = { path = "../zebra/zebra-chain", default-features = false }
+# zebra-consensus = { path = "../zebra/zebra-consensus", default-features = false }
+# zebra-state = { path = "../zebra/zebra-state", default-features = false }
+# zebra-test = { path = "../zebra/zebra-test", default-features = false }
+# zebra-chain = { path = "../zebra/zebra-chain", default-features = false }
 
 
 
