--- a/cartezcash-proxy/Cargo.toml
+++ b/cartezcash-proxy/Cargo.toml
@@ -13,10 +13,15 @@ tonic = { version = "0.11", features = ["prost", "codegen"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
-zebra-consensus = { workspace = true, default-features = false, features = ["getblocktemplate-rpcs"] }
+zebra-consensus = { workspace = true, default-features = false, features = [] }
 zebra-state = { workspace = true, default-features = false, features = ["proptest-impl"] }
 zebra-test = { workspace = true, default-features = false }
-zebra-chain = { workspace = true, default-features = false, features = ["getblocktemplate-rpcs", "proptest-impl"] }
+zebra-chain = { workspace = true, default-features = false, features = ["proptest-impl"] }
 tower = "0.4.13"
 hex = "0.4.3"
 futures-util = "0.3.30"
+anyhow = "1.0.81"
+hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
+base64-url = "2.0.2"
+serde = "1.0.197"
+ciborium = "0.2.2"
