--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ tiny-cash = { path = "tiny-cash" }
 
 cartezcash-proxy = { path = "cartezcash-proxy", optional = true }
 tonic = { version = "0.11.0", optional = true }
+ciborium = "0.2.2"
+base64-url = "2.0.2"
 
 [workspace]
 members = [ "cartezcash-proxy", "tiny-cash"]
