--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tracing-subscriber = "0.3.18"
 ethabi = "18.0.0"
 ciborium = "0.2.2"
 base64-url = "2.0.2"
+alloy-json-abi = "0.6.4"
 
 zebra-chain = { workspace = true }
 zebra-state = { workspace = true }
