--- a/tower-cartesi/Cargo.toml
+++ b/tower-cartesi/Cargo.toml
@@ -7,6 +7,7 @@ license = "APACHE-2.0"
 
 [dependencies]
 ethereum-types = "0.14.1"
+futures-util = "0.3.30"
 hex = "0.4.3"
 http = "1.1.0"
 hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
