add function in tinycash to force initialization of halo2 verifier key

--- a/tiny-cash/Cargo.toml
+++ b/tiny-cash/Cargo.toml
@@ -16,6 +16,7 @@ zebra-consensus = { workspace = true, default-features = false, features = [] }
 zebra-state = { workspace = true, default-features = false, features = ["proptest-impl"] }
 zebra-test = { workspace = true, default-features = false }
 zebra-chain = { workspace = true, default-features = false, features = ["proptest-impl"] }
+lazy_static = "1.4.0"
 
 
 [dev-dependencies]
