--- a/cartezcash-lightwalletd/Cargo.toml
+++ b/cartezcash-lightwalletd/Cargo.toml
@@ -21,6 +21,7 @@ base64-url = "2.0.2"
 serde = "1.0.197"
 ciborium = "0.2.2"
 json = "0.12.4"
+ethers = "1.0.0"
 
 zebra-consensus = { workspace = true, default-features = false, features = [] }
 zebra-state = { workspace = true, default-features = false, features = ["proptest-impl"] }
