--- a/tower-cartesi/Cargo.toml
+++ b/tower-cartesi/Cargo.toml
@@ -13,6 +13,7 @@ http = "1.1.0"
 hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+thiserror = "1.0.58"
 tower-service = "0.3.2"
 tracing = "0.1.40"
 
