--- a/tiny-cash/Cargo.toml
+++ b/tiny-cash/Cargo.toml
@@ -17,6 +17,8 @@ zebra-state = { workspace = true, default-features = false, features = ["proptes
 zebra-test = { workspace = true, default-features = false }
 zebra-chain = { workspace = true, default-features = false, features = ["proptest-impl"] }
 lazy_static = "1.4.0"
+orchard = "0.8.0"
+zcash_note_encryption = "0.4.0"
 
 
 [dev-dependencies]
