--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,27 +30,19 @@ jobs:
           command: check
           args: --all
   lints:
-    name: clippy and fmt
+    name: fmt check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Source
+        uses: actions/checkout@v3
       - uses: Swatinem/rust-cache@v2
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.3
         with: 
           token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          override: true
-          components: clippy,rustfmt
-      - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
-        continue-on-error: false
-        with:
-          command: fmt
-          args: --all -- --check
+      - name: Setup protoc
+        uses: arduino/setup-protoc@v1.1.2
       - uses: actions-rs/cargo@v1
         with:
-          command: clippy
-          args: -- -D warnings
+          command: fmt
+          args: --all --check
