--- a/tiny-cash/Cargo.toml
+++ b/tiny-cash/Cargo.toml
@@ -16,6 +16,8 @@ zebra-consensus = { workspace = true, default-features = false, features = [] }
 zebra-state = { workspace = true, default-features = false, features = ["proptest-impl"] }
 zebra-test = { workspace = true, default-features = false }
 zebra-chain = { workspace = true, default-features = false, features = ["proptest-impl"] }
+zebra-script = { workspace = true }
+
 lazy_static = "1.4.0"
 orchard = "0.8.0"
 zcash_note_encryption = "0.4.0"
