update zebra refs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,18 +48,18 @@ members = [ "cartezcash-lightwalletd", "tiny-cash", "tower-cartesi"]
 [workspace.dependencies]
 
 # patched zebra crates to support TinyCash network and expose things we need
-# zebra-consensus = { git = "https://github.com/willemolding/zebra", rev = "185e404bed938e3aa916aee1ae6999a70efceddb", default-features = false }
-# zebra-state = { git = "https://github.com/willemolding/zebra", rev = "185e404bed938e3aa916aee1ae6999a70efceddb", default-features = false }
-# zebra-test = { git = "https://github.com/willemolding/zebra", rev = "185e404bed938e3aa916aee1ae6999a70efceddb", default-features = false }
-# zebra-chain = { git = "https://github.com/willemolding/zebra", rev = "185e404bed938e3aa916aee1ae6999a70efceddb", default-features = false }
-# zebra-script = { git = "https://github.com/willemolding/zebra", rev = "185e404bed938e3aa916aee1ae6999a70efceddb", default-features = false }
+zebra-consensus = { git = "https://github.com/willemolding/zebra", rev = "04615946f3bae4e39925edae8ed1e150b7cf531a", default-features = false }
+zebra-state = { git = "https://github.com/willemolding/zebra", rev = "04615946f3bae4e39925edae8ed1e150b7cf531a", default-features = false }
+zebra-test = { git = "https://github.com/willemolding/zebra", rev = "04615946f3bae4e39925edae8ed1e150b7cf531a", default-features = false }
+zebra-chain = { git = "https://github.com/willemolding/zebra", rev = "04615946f3bae4e39925edae8ed1e150b7cf531a", default-features = false }
+zebra-script = { git = "https://github.com/willemolding/zebra", rev = "04615946f3bae4e39925edae8ed1e150b7cf531a", default-features = false }
 
 # uncomment for local dev when modifying zebra
-zebra-consensus = { path = "../zebra/zebra-consensus", default-features = false }
-zebra-state = { path = "../zebra/zebra-state", default-features = false }
-zebra-test = { path = "../zebra/zebra-test", default-features = false }
-zebra-chain = { path = "../zebra/zebra-chain", default-features = false }
-zebra-script = { path = "../zebra/zebra-script", default-features = false }
+# zebra-consensus = { path = "../zebra/zebra-consensus", default-features = false }
+# zebra-state = { path = "../zebra/zebra-state", default-features = false }
+# zebra-test = { path = "../zebra/zebra-test", default-features = false }
+# zebra-chain = { path = "../zebra/zebra-chain", default-features = false }
+# zebra-script = { path = "../zebra/zebra-script", default-features = false }
 
 
 [patch.crates-io]
