--- a/tower-cartesi/Cargo.toml
+++ b/tower-cartesi/Cargo.toml
@@ -8,9 +8,11 @@ license = "APACHE-2.0"
 [dependencies]
 ethereum-types = "0.14.1"
 futures-util = "0.3.30"
+graphql_client = "0.14.0"
 hex = "0.4.3"
 http = "1.1.0"
 hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
+num-bigint = { version = "0.4.4", features = ["serde"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 thiserror = "1.0.58"
