add example workflow to publish docker images

--- a/fly.fullnode.toml
+++ b/fly.fullnode.toml
@@ -1,7 +1,7 @@
 app = "cartezcash-fullnode"
 
 [build]
-image = "registry.fly.io/cartezcash-fullnode"
+image = "registry.fly.io/cartezcash-fullnode:latest"
 
 [[services]]
   internal_port = 50051
