--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,7 @@
 name: Publish Docker images
 
-on:
+on: 
+  workflow_dispatch:
   release:
     types: [published]
 
@@ -49,6 +50,13 @@ jobs:
             node-version: 20
             registry-url: "https://registry.npmjs.org"
         
+
+        # required for the cross-compilation, else it will error with `exec format error
+        - name: Set up QEMU
+          uses: docker/setup-qemu-action@v3
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+           
         - name: Install Sunodo and build
           run: |
             npm install -g @sunodo/cli
