--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -22,6 +22,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: fflyctl deploy --config fly.fullnode.toml --remote-only
+      - run: flyctl deploy --config fly.fullnode.toml --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
