working deployment of dApp node but not full node

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -15,13 +15,13 @@ jobs:
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
-  # deploy-fullnode:
-  #   name: Deploy fullnode
-  #   runs-on: ubuntu-latest
-  #   concurrency: deploy-group    # optional: ensure only one action runs at a time
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: superfly/flyctl-actions/setup-flyctl@master
-  #     - run: flyctl deploy --config fly.fullnode.toml --remote-only
-  #       env:
-  #         FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  deploy-fullnode:
+    name: Deploy fullnode
+    runs-on: ubuntu-latest
+    concurrency: deploy-group    # optional: ensure only one action runs at a time
+    steps:
+      - uses: actions/checkout@v4
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --config fly.fullnode.toml --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
