--- a/bridge-frontend/src/config.json
+++ b/bridge-frontend/src/config.json
@@ -17,8 +17,8 @@
         "token": "SepETH",
         "label": "Sepolia Test Network",
         "rpcUrl": "https://eth-goerli.g.alchemy.com/v2/demo",
-        "graphqlAPIURL" : "http://localhost:8080",
-        "inspectAPIURL":"http://localhost:8080",
+        "graphqlAPIURL" : "https://cartezcash.fly.dev",
+        "inspectAPIURL":"https://cartezcash.fly.dev",
         "DAppRelayAddress":"0xF5DE34d6BbC0446E2a45719E718efEbaaE179daE",
         "InputBoxAddress":"0x59b22D57D4f067708AB0c00552767405926dc768",
         "EtherPortalAddress":"0xFfdbe43d4c855BF7e0f105c400A50857f53AB044",
