--- a/tower-cartesi/Cargo.toml
+++ b/tower-cartesi/Cargo.toml
@@ -16,6 +16,7 @@ reqwest = { version = "0.12.3", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 thiserror = "1.0.58"
+tokio = { version = "1.32", features = ["time"] }
 tower-service = "0.3.2"
 tracing = "0.1.40"
 
