--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Deploy bridge Github Pages
 
 on: 
     workflow_dispatch:
@@ -23,6 +23,7 @@ jobs:
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
+          corepack enable
           yarn
           yarn build
 
