add codegen in ci

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           corepack enable
           yarn
+          yarn codegen
           yarn build
 
       - name: Deploy 🚀
