--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: build # The folder the action should deploy.
+          folder: bridge-frontend/build # The folder the action should deploy.
