--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,49 +13,32 @@ defaults:
     working-directory: bridge-frontend
 
 jobs:
-  deploy:
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
+  # Build job
+  build:
     runs-on: ubuntu-latest
-    needs: jekyll-build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v3
+      - name: Build with Yarn
+        run: |
+          corepack enable
+          yarn
+          yarn codegen
+          yarn build
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+
+  # Deployment job
+  deploy:
     environment:
       name: github-pages
       url: ${{steps.deployment.outputs.page_url}}
+    runs-on: ubuntu-latest
+    needs: build
     steps:
-      - name: Deploy artifact
+      - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
-
-
-         jobs:
-            # Build job
-            build:
-              runs-on: ubuntu-latest
-              steps:
-                - name: Checkout
-                  uses: actions/checkout@v4
-                - name: Setup Pages
-                  id: pages
-                  uses: actions/configure-pages@v3
-                - name: Build with Yarn
-                - run: |
-                    corepack enable
-                    yarn
-                    yarn codegen
-                    yarn build
-                - name: Upload artifact
-                  uses: actions/upload-pages-artifact@v2
-          
-            # Deployment job
-            deploy:
-              environment:
-                name: github-pages
-                url: ${{steps.deployment.outputs.page_url}}
-              runs-on: ubuntu-latest
-              needs: build
-              steps:
-                - name: Deploy to GitHub Pages
-                  id: deployment
-                  uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v2
