--- a/tower-cartesi/Cargo.toml
+++ b/tower-cartesi/Cargo.toml
@@ -12,7 +12,7 @@ graphql_client = "0.14.0"
 hex = "0.4.3"
 http = "1.1.0"
 num-bigint = { version = "0.4.4", features = ["serde"] }
-reqwest = { version = "0.12.3", features = ["json"] }
+reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 thiserror = "1.0.58"
@@ -23,3 +23,6 @@ tracing = "0.1.40"
 [dev-dependencies]
 tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.18"
+
+[features]
+tls = ["reqwest/default-tls"]
