add correct tokens and fix sunodo build

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,8 +6,10 @@ on:
     types: [published]
 
 permissions:
-  contents: write
-
+    contents: read
+    pages: write
+    id-token: write
+    
 defaults:
   run:
     working-directory: bridge-frontend
