--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,29 +6,29 @@ on:
     types: [published]
 
 jobs:
-#   push_fullnode_to_registry:
-#     name: Push fullnode Docker image to fly.io
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Check out the repo
-#         uses: actions/checkout@v4
+  push_fullnode_to_registry:
+    name: Push fullnode Docker image to fly.io
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
 
-#       - name: 🔑 Fly Registry Auth
-#         uses: docker/login-action@v1
-#         with:
-#           registry: registry.fly.io
-#           username: x
-#           password: ${{ secrets.FLY_API_TOKEN }}
+      - name: 🔑 Fly Registry Auth
+        uses: docker/login-action@v1
+        with:
+          registry: registry.fly.io
+          username: x
+          password: ${{ secrets.FLY_API_TOKEN }}
 
-#       - name: 🐳 Docker build (fullnode)
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: .
-#           file: ./fullnode.Dockerfile
-#           push: true
-#           tags: registry.fly.io/cartezcash-fullnode:latest
-#           build-args: |
-#             COMMIT_SHA=${{ github.sha }}
+      - name: 🐳 Docker build (fullnode)
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./fullnode.Dockerfile
+          push: true
+          tags: registry.fly.io/cartezcash-fullnode:latest
+          build-args: |
+            COMMIT_SHA=${{ github.sha }}
 
   push_cartesi_node_to_registry:
     name: Push cartesi node Docker image to fly.io
