--- a/fly.fullnode.toml
+++ b/fly.fullnode.toml
@@ -19,5 +19,5 @@ size = "shared-cpu-1x"
 memory = "2gb"
 
 [env]
-GRPC_SERVER_URL="[::1]:50051"
+GRPC_SERVER_URL="0.0.0.0:50051"
 ROLLUP_HTTP_SERVER_URL="http://cartezcash.internal:10000/graphql"
