--- a/bridge-frontend/package.json
+++ b/bridge-frontend/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@cartesi/rollups": "1.0.0",
+        "@chakra-ui/icons": "^2.1.1",
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
