--- a/fly.fullnode.toml
+++ b/fly.fullnode.toml
@@ -21,3 +21,6 @@ memory = "2gb"
 [env]
 GRPC_SERVER_URL="0.0.0.0:50051"
 ROLLUP_HTTP_SERVER_URL="http://cartezcash.internal:10000/graphql"
+ETH_CHAIN_ID="11155111"
+INPUTBOX_CONTRACT_ADDRESS="0x59b22D57D4f067708AB0c00552767405926dc768"
+ETH_RPC_URL="https://eth-sepolia.g.alchemy.com/v2/demo"
