--- a/fly.fullnode.toml
+++ b/fly.fullnode.toml
@@ -25,3 +25,4 @@ ETH_CHAIN_ID="11155111"
 INPUTBOX_CONTRACT_ADDRESS="0x59b22D57D4f067708AB0c00552767405926dc768"
 ETH_RPC_URL="https://eth-sepolia.g.alchemy.com/v2/demo"
 DAPP_ADDRESS = "0x589DAc2C23C2bc1b60112eD66049ECba90e7AD3e"
+ETH_DEPOSIT_ADDR="0xFfdbe43d4c855BF7e0f105c400A50857f53AB044"
