--- a/fly.fullnode.toml
+++ b/fly.fullnode.toml
@@ -23,6 +23,6 @@ GRPC_SERVER_URL="0.0.0.0:50051"
 ROLLUP_HTTP_SERVER_URL="http://cartezcash.internal:10000/graphql"
 ETH_CHAIN_ID="11155111"
 INPUTBOX_CONTRACT_ADDRESS="0x59b22D57D4f067708AB0c00552767405926dc768"
-ETH_RPC_URL="https://eth-sepolia.g.alchemy.com/v2/demo"
-DAPP_ADDRESS = "0x589DAc2C23C2bc1b60112eD66049ECba90e7AD3e"
+ETH_RPC_URL="https://sepolia.infura.io/v3/ccfd148140454f7abb2664d0d13ea381"
+DAPP_ADDRESS = "0x02370C5B1217b3E80b18132403DE02ee6240e07C"
 ETH_DEPOSIT_ADDR="0xFfdbe43d4c855BF7e0f105c400A50857f53AB044"
