--- a/bridge-frontend/package.json
+++ b/bridge-frontend/package.json
@@ -20,6 +20,7 @@
         "@types/react-dom": "^18.0.3",
         "@web3-onboard/core": "^2.2.6",
         "@web3-onboard/injected-wallets": "^2.0.5",
+        "@web3-onboard/metamask": "^2.1.0",
         "@web3-onboard/react": "^2.1.5",
         "@web3pack/base58-check": "^1.0.3",
         "buffer": "^6.0.3",
