update graphql main loop of tower_cartesi so it doesnt crash on errors

--- a/fly.fullnode.toml
+++ b/fly.fullnode.toml
@@ -1,7 +1,8 @@
 app = "cartezcash-fullnode"
 
 [build]
-image = "registry.fly.io/cartezcash-fullnode:latest"
+# image = "registry.fly.io/cartezcash-fullnode:latest"
+dockerfile = "fullnode.Dockerfile"
 
 [[services]]
   internal_port = 50051
