--- a/fly.toml
+++ b/fly.toml
@@ -1,7 +1,8 @@
 app = "cartezcash"
 
 [build]
-image = "registry.fly.io/cartezcash:latest"
+# image = "registry.fly.io/cartezcash:latest"
+dockerfile = "./Dockerfile"
 
 [http_service]
 internal_port = 10000
