update for new deployment

--- a/fly.toml
+++ b/fly.toml
@@ -1,8 +1,7 @@
 app = "cartezcash"
 
 [build]
-# image = "registry.fly.io/cartezcash:latest"
-dockerfile = "./Dockerfile"
+image = "registry.fly.io/cartezcash:latest"
 
 [http_service]
 internal_port = 10000
@@ -27,10 +26,10 @@ memory = "2gb"
 [env]
 CARTESI_BLOCKCHAIN_FINALITY_OFFSET = "1"
 CARTESI_BLOCKCHAIN_ID = "11155111"
-CARTESI_CONTRACTS_APPLICATION_ADDRESS = "0x02370C5B1217b3E80b18132403DE02ee6240e07C"
-CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER = "5958307"
-CARTESI_CONTRACTS_AUTHORITY_ADDRESS = "0x9c19314C56238e28107A4122fc536D977a1986C6"
-CARTESI_CONTRACTS_HISTORY_ADDRESS = "0x0cD956B572379DA203D5eEe85f6D17bA3EbF9625"
+CARTESI_CONTRACTS_APPLICATION_ADDRESS = "0x0861329Be3032DA84cf56Dd08ca4CE5b13206a60"
+CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER = "6029967"
+CARTESI_CONTRACTS_AUTHORITY_ADDRESS = "0x8afa60157596846264e78f790FB69211BD96b2Ee"
+CARTESI_CONTRACTS_HISTORY_ADDRESS = "0x5caaeD1f8BD456C8097BE0Db8780009322B86428"
 CARTESI_CONTRACTS_INPUT_BOX_ADDRESS = "0x59b22D57D4f067708AB0c00552767405926dc768"
 CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER = "3963384"
 CARTESI_EPOCH_DURATION = "86400"
